# openai-quickstart-python

./: .replit  app.py  pyproject.toml  requirements.txt
templates/: index.html
