[tool.poetry]
name = "openai-quickstart-python-2"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
itsdangerous = "^2.1.2"
autopep8 = "^2.0.1"
pandas= "^1.3.4"
Flask = "^2.2.2"
openai = "^0.25.0"
six = "^1.16.0"
MarkupSafe = "^2.1.1"
certifi = "^2024.7.4"
charset-normalizer = "^3.0.1"
click = "^8.1.3"
et-xmlfile = "^1.1.0"
Jinja2 = "^3.1.2"
numpy = "^1.23.5"
openpyxl = "^3.0.10"
pycodestyle = "^2.10.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.0"
pytz = "^2022.6"
toml = "^0.10.2"
tqdm = "^4.64.1"
urllib3 = "^1.26.13"
Werkzeug = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
